# gnordofs

./: .gitignore  CMakeLists.txt  block.c  dir.c  fs.c  gnordofs.c  gnordofs.kdev4  inode.c  misc.c  mkfs.gnordofs.c  perms.c  superblock.c
.kdev4/: gnordofs.kdev4
include/: block.h  dir.h  fs.h  inode.h  misc.h  perms.h  superblock.h
